# tele_user_service

./: .env.example  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requests.http
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/api/internal/: notify.py  users.py
app/core/: auth.py  config.py  db.py  deps.py
app/migrations/: env.py
app/migrations/versions/: 56eb0b13f8ca_create_users.py  70c0b60e70ab_create_users.py  763569c86a95_create_users.py  92f630e21c8b_create_users.py
app/models/: base.py  users.py
app/repositories/: users.py
app/schemas/: notify.py  users.py
app/services/: users.py  validation.py
docs/: auth.md
migration/: env.py
migration/versions/: 5ee373ccede8_.py
tests/: conftest.py  test_api.py  test_repository.py
