[project]
name = "tele-user-service"
version = "0.1.0"
description = ""
authors = [
    {name = "angryw1sp",email = "angrywisp96@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi (>=0.124.4,<0.125.0)",
    "uvicorn[standard] (>=0.38.0,<0.39.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "sqlalchemy (>=2.0.45,<3.0.0)",
    "alembic (>=1.17.2,<2.0.0)",
    "psycopg (>=3.3.2,<4.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "aiosqlite (>=0.22.0,<0.23.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.14.9,<0.15.0)",
    "black (>=25.12.0,<26.0.0)",
    "psycopg[binary] (>=3.3.2,<4.0.0)"
]
test = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "httpx (>=0.24.0,<1.0.0)"
]

[tool.ruff]
line-length = 79

[tool.black]
line-length = 79
target-version = ["py311"]